--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@nextui-org/react": "^2.4.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
@@ -20,6 +21,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
