--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@internationalized/date": "^3.5.4",
     "@nextui-org/react": "^2.4.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@react-aria/i18n": "^3.11.1",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "dayjs": "^1.11.11",
+    "dexie": "^4.0.7",
+    "fake-indexeddb": "^6.0.0",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
     "localforage": "^1.10.0",
