--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "@remix-run/serve": "^2.9.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "dexie": "^4.0.7",
+    "dexie-react-hooks": "^1.1.7",
     "fake-indexeddb": "^6.0.0",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.395.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-toastify": "^10.0.5",
     "remix-hook-form": "^4.3.1",
     "zod": "^3.23.8"
   },
