--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Depts", "Dexie", "Dismissable", "fkey", "localforage"]
+  "cSpell.words": [
+    "Depts",
+    "Dexie",
+    "Dismissable",
+    "fkey",
+    "INHOUSE",
+    "localforage"
+  ]
 }
