--- a/package.json
+++ b/package.json
@@ -11,26 +11,35 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.1",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.6.0",
     "@internationalized/date": "^3.5.4",
     "@nextui-org/react": "^2.4.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-aria/i18n": "^3.11.1",
+    "@react-pdf/renderer": "^3.4.4",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "@remixicon/react": "^4.2.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@tremor/react": "^3.17.4",
+    "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "dexie": "^4.0.7",
     "dexie-react-hooks": "^1.1.7",
     "fake-indexeddb": "^6.0.0",
+    "form-data": "^4.0.0",
     "framer-motion": "^11.2.10",
     "isbot": "^4.1.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.395.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-toastify": "^10.0.5",
@@ -39,6 +48,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
