working on approval

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "Dismissable",
     "fkey",
     "INHOUSE",
-    "localforage"
+    "kzeiyhgawfiiiljp",
+    "localforage",
+    "Mwondha"
   ]
 }
