--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "dev": "remix vite:dev --host",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.19",
+    "@fontsource/fira-sans": "^5.0.20",
     "@headlessui/react": "^2.1.1",
     "@headlessui/tailwindcss": "^0.2.1",
     "@hookform/resolvers": "^3.6.0",
@@ -18,7 +20,9 @@
     "@nextui-org/react": "^2.4.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-aria/i18n": "^3.11.1",
+    "@react-email/components": "^0.0.21",
     "@react-pdf/renderer": "^3.4.4",
+    "@react-stately/data": "^3.11.4",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
@@ -34,21 +38,33 @@
     "fake-indexeddb": "^6.0.0",
     "form-data": "^4.0.0",
     "framer-motion": "^11.2.10",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-fs-backend": "^2.3.1",
+    "i18next-http-backend": "^2.5.2",
     "isbot": "^4.1.0",
+    "jose": "^5.6.3",
     "localforage": "^1.10.0",
     "lucide-react": "^0.395.0",
+    "nanoid": "^5.0.7",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-i18next": "^14.1.2",
     "react-toastify": "^10.0.5",
     "remix-hook-form": "^4.3.1",
-    "zod": "^3.23.8"
+    "remix-i18next": "^6.1.0",
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.3.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
